--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,12 @@ button {
     position: relative;
     bottom: 200px;
 }
+
+footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    color: white;
+    text-align: center;
+}
