--- a/css/styles.css
+++ b/css/styles.css
@@ -83,11 +83,12 @@ p {
   .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 10%;
     width: auto;
     padding: 16px;
     margin-top: -50px;
     color: white;
+    background-color: white;
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
@@ -136,5 +137,19 @@ p {
   
   .hover-shadow:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  
+  #photos {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 100px;
+    padding-top: 5px;
+}
+
+  #photos img {
+    flex: 25%;
+    padding:30px;
+    background:#f9f9f9;
+    border-bottom:1px solid #fff;
   }
   
